<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Moniremit</string>
    <!--    splash screen welcome page-->
    <string name="next">Next</string>
    <string name="discover">Discover</string>
    <string name="transfer">Transfer</string>
    <string name="offers">Offers</string>
    <string name="join">Join us</string>
    <string name="discover_text">Move money over and time</string>
    <string name="discover_desc">MoniRemit aims to use advanced technology to bring a solution to financial inclusion problems </string>
    <string name="transfer_text">Transformation power for financial inclusion</string>
    <string name="transfer_desc">Harnessing financial inclusion through digital innovation. Adults who are excluded from the formal financial system will be able to manage their financial lives</string>
    <string name="offers_text">Stop overpaying when sending money.</string>
    <string name="joins">Fighting to reduce high costs of remittance</string>
    <string name="offers_texts">Availability and equal access to financial services.</string>
    <string name="offer_desc">Traditional approach does not work well to provide a sustainable financial inclusion.</string>
    <string name="join_text">Moniremit speed sound transfer </string>
    <string name="join_desc">join now to organize all your remittance</string>
    <string name="start">Get Started</string>
    <string name="register">Register</string>

    <!--    registration and log-in-->

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="profile">Personal Information</string>
    <string name="nationality">Nationality</string>
    <string name="phone_number">Cell phone number</string>
    <string name="alternative_cellPhone_number">Alternative cell phone number</string>
    <string name="passport_photo">Upload your passport photo</string>
    <string name="identification_type">Select identification type</string>
    <string name="RDAID_number">RSAID number</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="country_of_your_birth">the country of your birth</string>
    <string name="photo_ID">Please provide a photo of original ID document</string>
    <string name="address_details">Address details</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="street_no">Street No</string>
    <string name="street_name">Street name</string>
    <string name="postal_code">Postal code</string>
    <string name="photo_residence">Please provide a proof photo of a residence</string>
    <string name="terms_conditions">Terms and conditions</string>
    <string name="signature">Complete the registration with your signature by signing the box below using your index finger</string>
    <string name="verification_code">Type verification code here</string>
    <string name="username">Username</string>
    <string name="pin">Enter your PIN</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="reset_pin">Enter your cell phone number</string>
    <string name="reset_text">Reset your pin</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="registration">click here to register</string>
    <string name="verification_code_text">Verification code</string>
    <string name="comfirmation_message">Your request has been submitted successfully.You will receive an SMS confirming your login PIN shortly</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--    top-up process-->

    <string name="bank_pay">Which country is your bank account located at</string>
    <string name="bank_location">Enter bank location</string>
    <string name="select_bank">Select bank you want to pay to</string>
    <string name="checkbox_bank_of_kigali">Bank of kigali</string>
    <string name="checkbox_equity">Equity bank</string>
    <string name="checkbox_ecobank">Ecobank</string>
    <string name="checkbox_access_bank">Access bank</string>
    <string name="checkbox_kcb">Kenya Commercial Bank(KCB)</string>
    <string name="continue_btn">Continue</string>


</resources>