<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/bank_pay"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/bank_pay"
        android:textColor="@color/primaryColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/bank_location"/>

    <EditText
        android:id="@+id/bank_location"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:padding="9dp"
        android:background="@drawable/edit_text_background"
        android:textColor="@color/accentColor"
        android:hint="@string/bank_location"
        android:textColorHint="@color/accentColor"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_pay"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:textColor="@color/accentColor"
        android:layout_marginTop="20dp"
        android:buttonTint="@color/accentColor"
        android:text="@string/checkbox_bank_of_kigali"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_location"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:textColor="@color/accentColor"
        android:buttonTint="@color/accentColor"
        android:text="@string/checkbox_access_bank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:text="@string/checkbox_kcb"
        android:buttonTint="@color/accentColor"
        android:textColor="@color/accentColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />


    <Button
        android:id="@+id/send_bank_location"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:background="@drawable/button_background"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox3"/>

</androidx.constraintlayout.widget.ConstraintLayout>