<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/etemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"

            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/mypass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:hint="@string/pin"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/btnlogin"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:text="@string/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/createnewac"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:layout_gravity="center"
            android:text="Create a new Acount!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>