<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/identification_type"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:padding="9dp"
        android:hint="@string/identification_type"
        android:background="@drawable/edit_text_background"
        android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
        android:textColorHint="#E2535353"
        android:textColor="#E2535353"
        android:drawablePadding="6dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edit_RDAID_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/edit_RDAID_number"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:hint="@string/RDAID_number"
        android:padding="9dp"
        android:drawableLeft="@drawable/ic_baseline_phonelink_setup_24"
        android:drawablePadding="6dp"
        android:textColor="#E2535353"
        android:textColorHint="#E2535353"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_background"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/birth_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identification_type" />

    <EditText
        android:id="@+id/birth_date"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:padding="9dp"
        android:textColorHint="#E2535353"
        android:drawableRight="@drawable/ic_baseline_date_range_24"
        android:drawablePadding="6dp"
        android:textColor="#E2535353"
        android:background="@drawable/edit_text_background"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/photo_ID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_RDAID_number" />
    <TextView
        android:id="@+id/photo_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo_ID"
        android:layout_margin="15dp"
        android:textColor="#E2535353"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/birth_date"
        android:gravity="center_horizontal" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_ID" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="13dp"
        android:text="Create a New Acount"
        android:textColor="@color/redColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>